cmake_minimum_required(VERSION 3.31)
project(Rec_FUNC)

set(CMAKE_CXX_STANDARD 20)

add_executable(Rec_FUNC main.cpp
        problem1.cpp
        problem2.cpp
        problem3.cpp
        problem4.cpp
        problem5.cpp
        problem6.cpp
        problem7.cpp
        problem8.cpp
        problem9.cpp)
